# Study_RAG-ChatBot-Document-Search

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt
data/: url.txt
src/config/: __init__.py
src/documents/: document_processor.py
src/graph/: graph_builder.py
src/nodes/: nodes.py  react_node.py
src/state/: rag_state.py
src/vector_store/: vectorstore.py
